--- a/index.html
+++ b/index.html
@@ -12,14 +12,18 @@
         
         <style>
 #first-sentence {
-color:rgb(237, 19, 19)
+color:rgb(237, 0, 0)
+}
+
+#body{
+background-color:rgb(0, 160, 237)
 }
         </style>
 
     </head>
 
 
-    <body>
+    <body id="body">
 
         <p id="first-sentence">
             
