--- a/page2.html
+++ b/page2.html
@@ -17,7 +17,7 @@
 
     <body>
 
-<!--https://www.pinterest.com.au/pin/disfraces-simples-video-in-2022--17099673577739810/-->
+<a href="https://www.pinterest.com.au/pin/17099673577739810/">ok</a>
         <p>
             
             YOOO this is page 2 of my website
