--- a/index.html
+++ b/index.html
@@ -44,7 +44,15 @@ You have wasted your life on this website for <span id="seconds">0</span> second
             var counts = window.setInterval(countUp, 1000)
         
         </script>
+<p>
 
+Links to other parts of this website:
+
+SBHS homepage: tacomelon101.github.io/SBHShomepage
+
+Latin --> English: tacomelon101.github.io/translator
+
+</p>
 
 
     </body>
