--- a/translator.html
+++ b/translator.html
@@ -29,171 +29,171 @@
             var english = document.getElementById("english");
             
         var tranIt = function() {
-            if(latin = "canis") {
+            if(latin.value == "canis") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "dog";
             };
-            if(latin = "coquus") {
+            if(latin.value == "coquus") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "cook";
             };
-            if(latin = "mater") {
+            if(latin.value == "mater") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "mother";
             };
-            if(latin = "filius") {
+            if(latin.value == "filius") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "son";
             };
-            if(latin = "hortus") {
+            if(latin.value == "hortus") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "garden";
             };
-            if(latin = "laborat") {
+            if(latin.value == "laborat") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "works, is working";
             };
-            if(latin = "pater") {
+            if(latin.value == "pater") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "father";
             };
-            if(latin = "sedet") {
+            if(latin.value == "sedet") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "sits, is sitting";
             };
-            if(latin = "servus") {
+            if(latin.value == "servus") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "slave";
             };
-            if(latin = "via") {
+            if(latin.value == "via") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "street";
             };
-            if(latin = "amicus") {
+            if(latin.value == "amicus") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "friend";
             };
-            if(latin = "ancilla") {
+            if(latin.value == "ancilla") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "friend";
             };
-            if(latin = "cena") {
+            if(latin.value == "cena") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "dinner";
             };
-            if(latin = "cibus") {
+            if(latin.value == "cibus") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "food";
             };
-            if(latin = "dominus") {
+            if(latin.value == "dominus") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "master";
             };
-            if(latin = "dormit") {
+            if(latin.value == "dormit") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "sleeps";
             };
-            if(latin = "intrat") {
+            if(latin.value == "intrat") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "enters";
             };
-            if(latin = "laetus") {
+            if(latin.value == "laetus") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "happy";
             };
-            if(latin = "laudat") {
+            if(latin.value == "laudat") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "praises";
             };
-            if(latin = "mercator") {
+            if(latin.value == "mercator") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "merchant";
             };
-            if(latin = "quoque") {
+            if(latin.value == "quoque") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "also";
             };
-            if(latin = "salutat") {
+            if(latin.value == "salutat") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "greets";
             };
-            if(latin = "ad") {
+            if(latin.value == "ad") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "to";
             };
-            if(latin = "bibit") {
+            if(latin.value == "bibit") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "drinks";
             };
-            if(latin = "circumspectat") {
+            if(latin.value == "circumspectat") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "looks round";
             };
-            if(latin = "clamat") {
+            if(latin.value == "clamat") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "shouts";
             };
-            if(latin = "ecce") {
+            if(latin.value == "ecce") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "look";
             };
-            if(latin = "exspectat") {
+            if(latin.value == "exspectat") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "waits for";
             };
-            if(latin = "iauna") {
+            if(latin.value == "iauna") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "door";
             };
-            if(latin = "iratus") {
+            if(latin.value == "iratus") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "angry";
             };
-            if(latin = "leo") {
+            if(latin.value == "leo") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "lion";
             };
-            if(latin = "magnus") {
+            if(latin.value == "magnus") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "big";
             };
-            if(latin = "navis") {
+            if(latin.value == "navis") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "ship";
             };
-            if(latin = "non") {
+            if(latin.value == "non") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "not";
             };
-            if(latin = "portat") {
+            if(latin.value == "portat") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "carries";
             };
-            if(latin = "respondet") {
+            if(latin.value == "respondet") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "replies";
             };
-            if(latin = "ridet") {
+            if(latin.value == "ridet") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "laughs, smiles";
             };
-            if(latin = "salve") {
+            if(latin.value == "salve") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "hello";
             };
-            if(latin = "surgit") {
+            if(latin.value == "surgit") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "gets up, stands up";
             };
-            if(latin = "taberna") {
+            if(latin.value == "taberna") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "shop, inn";
             };
-            if(latin = "videt") {
+            if(latin.value == "videt") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "sees";
             };
-            if(latin = "vinum") {
+            if(latin.value == "vinum") {
                 var translationDiv = document.getElementById("translation");
                 translationDiv.textContent = "wine";
             };
