--- a/index.html
+++ b/index.html
@@ -54,6 +54,15 @@ Latin --> English: tacomelon101.github.io/translator
 
 </p>
 
+<ul>
+
+<li> SBHS homepage: tacomelon101.github.io/SBHShomepage </li>
+
+<li> Latin --> English: tacomelon101.github.io/translator </li>
+
+
+</ul>
+
 
     </body>
 
